--- a/recipes/templates/recipes/favorite.html
+++ b/recipes/templates/recipes/favorite.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% load custom_filters %}
-{% block title %}Рецепты{% endblock %}
+{% block title %}Избранное{% endblock %}
 {% block static %}
 
     <link rel="stylesheet" href="{% static 'pages/index.css' %}">
@@ -10,7 +10,7 @@
 {% block content %}
     <main class="main container">
         <div class="main__header">
-            <h1 class="main__title">Рецепты</h1>
+            <h1 class="main__title">Избранное</h1>
             {% include 'recipes/tags.html' %}
         </div>
         <div class="card-list">
@@ -30,5 +30,5 @@
     <script src="{% static 'js/components/CardList.js' %}"></script>
     <script src="{% static 'js/components/Header.js' %}"></script>
     <script src="{% static 'js/api/Api.js' %}"></script>
-    <script src="{% static 'indexAuth.js' %}"></script>
+    <script src="{% static 'favorite.js' %}"></script>
 {% endblock %}
