--- a/users/templates/registration/password_change_done.html
+++ b/users/templates/registration/password_change_done.html
@@ -9,8 +9,8 @@
 {% block content %}
     <main class="main container">
         <div class="custom-center-block">
-            <h1 class="main__title">Вы вышли из системы</h1>
-            <p class="custom-text-block">Вы вышли из своей учётной записи. Ждём вас снова!</p>
+            <h1 class="main__title">Пароль изменён</h1>
+            <p class="custom-text-block">Пароль изменён успешно.</p>
             <div class="custom-button-block">
                 <a href="{% url  'index' %}">
                     <button class="button button_style_blue">Перейти на главную</button>
