--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -12,9 +12,7 @@
             <h1 class="main__title">Вы вышли из системы</h1>
             <p class="custom-text-block">Вы вышли из своей учётной записи. Ждём вас снова!</p>
             <div class="custom-button-block">
-                <a href="{% url  'index' %}">
-                    <button class="button button_style_blue">Перейти на главную</button>
-                </a>
+            <a href="{% url 'index' %}">Перейти на главную</a>
             </div>
         </div>
     </main>
