--- a/users/templates/registration/password_change_done.html
+++ b/users/templates/registration/password_change_done.html
@@ -12,9 +12,7 @@
             <h1 class="main__title">Пароль изменён</h1>
             <p class="custom-text-block">Пароль изменён успешно.</p>
             <div class="custom-button-block">
-                <a href="{% url  'index' %}">
-                    <button class="button button_style_blue">Перейти на главную</button>
-                </a>
+             <a href="{% url 'index' %}">Перейти на главную</a>
             </div>
         </div>
     </main>
