--- a/recipes/templates/recipes/profile.html
+++ b/recipes/templates/recipes/profile.html
@@ -14,7 +14,7 @@
     <main class="main container">
         <div class="main__header">
             <h1 class="main__title">{{ author.get_full_name|default:author.username }}</h1>
-            {% include 'recipes/tags.html' %}
+            {% include 'recipes/includes/tags.html' %}
         </div>
 
         <div class="author-subscribe" data-author="{{ author.id }}">
@@ -35,7 +35,7 @@
 
         <div class="card-list">
             {% for recipe in page %}
-                {% include 'recipes/recipe.html' %}
+                {% include 'recipes/includes/recipe.html' %}
             {% endfor %}
         </div>
         {% include 'paginator.html' with items=page paginator=paginator %}
