--- a/recipes/templates/recipes/favorite.html
+++ b/recipes/templates/recipes/favorite.html
@@ -21,7 +21,9 @@
                 {% include 'recipes/includes/recipe.html' %}
             {% endfor %}
         </div>
+    {% if page.has_other_pages %}
         {% include 'paginator.html' with items=page paginator=paginator %}
+    {% endif %}
     </main>
 {% endblock %}
 
