--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,9 @@
                 {% include 'recipes/includes/recipe.html' %}
             {% endfor %}
         </div>
+    {% if page.has_other_pages %}
         {% include 'paginator.html' with items=page paginator=paginator %}
+    {% endif %}
     </main>
 {% endblock %}
 
