--- a/recipes/templates/recipes/subscription.html
+++ b/recipes/templates/recipes/subscription.html
@@ -20,7 +20,9 @@
                 {% include 'recipes/authors_recipes.html' %}
             {% endfor %}
         </div>
+    {% if page.has_other_pages %}
         {% include 'paginator.html' with items=page paginator=paginator %}
+    {% endif %}
     </main>
 {% endblock %}
 
